Fix X scrollbar appearing

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body {
 }
 
 .message-scroller {
+  overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
 }
